<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Theme.TokopediaUI.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="800dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:src="@drawable/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/payment_saldo"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="3dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_gopay"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/gopay"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_gopay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/title_gopay"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/img_gopay"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subtitle_gopay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/subtitle_gopay"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/img_gopay"
                        app:layout_constraintEnd_toEndOf="@id/title_gopay"
                        app:layout_constraintStart_toStartOf="@+id/title_gopay"
                        app:layout_constraintTop_toBottomOf="@+id/title_gopay" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/ruler_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="189dp" />

                    <ImageView
                        android:id="@+id/img_member"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/member"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/ruler_card"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_member"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/title_member"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_member"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subtitle_member"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/subtitle_member"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/img_member"
                        app:layout_constraintEnd_toEndOf="@id/title_member"
                        app:layout_constraintStart_toStartOf="@+id/title_member"
                        app:layout_constraintTop_toBottomOf="@+id/title_member" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_saldo"
                tools:listitem="@layout/item_home" />


            <ImageView
                android:id="@+id/banner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/carousel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_menu" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner"
                tools:listitem="@layout/item_home" />

            <TextView
                android:id="@+id/card_diskon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desc_diskon"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rv_menu_second"
                app:layout_constraintStart_toStartOf="@id/rv_menu_second"
                app:layout_constraintTop_toBottomOf="@id/rv_menu_second" />

            <TextView
                android:id="@+id/txt_berakhir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/berakhir_dalam"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="@id/card_diskon"
                app:layout_constraintTop_toBottomOf="@id/card_diskon" />
            <TextView
                android:id="@+id/txt_all_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Lihat Semua"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@id/banner"
                app:layout_constraintTop_toTopOf="@id/card_countdown"
                app:layout_constraintBottom_toBottomOf="@id/card_countdown"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_countdown"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@android:color/holo_red_dark"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_berakhir"
                app:layout_constraintStart_toEndOf="@id/txt_berakhir"
                app:layout_constraintTop_toTopOf="@id/txt_berakhir">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_countdown_time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="00:27:10"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/img_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_time"
                        app:layout_constraintTop_toTopOf="@id/img_time" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_countdown">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_product" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>